--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <span>O</span>
     </div>
     <div class="description">
+        <span>SELAMAT ULANG TAHUN NISRINA ATSIL</span>
         <span>Aku ada hadiah spesial buat kamu!!</span>
     </div>
     <div class="button">
