--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
+        <span>N</span>
+        <span>I</span>
+        <span>S</span>
+        <span>R</span>
+        <span>I</span>
+        <span>N</span>
+        <span>A</span>
     </div>
     <div class="description">
-        <span>SELAMAT ULANG TAHUN NISRINA ATSIL</span>
         <span>Aku ada hadiah spesial buat kamu!!</span>
     </div>
     <div class="button">
