--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-        <span>N</span>
-        <span>I</span>
-        <span>S</span>
-        <span>R</span>
-        <span>I</span>
-        <span>N</span>
-        <span>A</span>
+    </div>
+     <div class="description">
+        <span>Selamat Ulang Tahun Nisrina</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
