--- a/flower.html
+++ b/flower.html
@@ -308,5 +308,8 @@
       </div>
     </div>
     <script src="main.js"></script>
+    <audio autoplay>
+        <source src = "birthday.mp3" type="audio/mp3"/>
+    </audio>
   </body>
 </html>
