--- a/flower.html
+++ b/flower.html
@@ -311,5 +311,11 @@
     <audio autoplay>
         <source src = "birthday.mp3" type="audio/mp3"/>
     </audio>
+     <div class="button">
+        <button>
+            <a href="last.html">Klik lagi</a>
+        </button>
+        
+    </div>
   </body>
 </html>
