--- a/last.html
+++ b/last.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+    <title>Flowers</title>
+</head>
+<body>
+    <div class="greetings">
+    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>D</span>
+        <span>O</span>
+        <span>A</span>
+    </div>
+     <div class="description">
+        <span>Selamat menginjak 21+ alias adulthood nisrina. It's been almost 9 years since we first met.</span>
+    </div>
+    <div class="description">
+        <span>tau ga kata orang usia pertemanan diatas 7 tahun itu bakal kekal selamanya? wkwkwk</span>
+    </div>
+      <div class="description">
+        <span>semoga kelak pas anak kita smp bareng, they share the same stories as we did</span>
+    </div>
+      <div class="description">
+        <span>kayaknya kalo kebanyakan doa udah basi ya, jadi singkat aja, may all your wishes come true</span>
+    </div>
+      <div class="description">
+        <span>and the wind guide you, traveler!</span>
+    </div>
+</body>
+</html>
