--- a/index.html
+++ b/index.html
@@ -29,5 +29,10 @@
         </button>
         
     </div>
+     <div class="button">
+        <button>
+            <a href="last.html">Klik lagi</a>
+        </button>
+     </div>
 </body>
 </html>
