--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
         <button>
             <a href="flower.html">Klik disini</a>
         </button>
-        
     </div>
      <div class="button">
         <button>
             <a href="last.html">Klik lagi</a>
         </button>
      </div>
+    <audio autoplay>
+        <source src = "akhir.mp3" type="audio/mp3"/>
+    </audio>
 </body>
 </html>
