--- a/last.html
+++ b/last.html
@@ -16,19 +16,7 @@
         <span>A</span>
     </div>
      <div class="description">
-        <span>Selamat menginjak 21+ alias adulthood nisrina. It's been almost 9 years since we first met.</span>
-    </div>
-    <div class="description">
-        <span>tau ga kata orang usia pertemanan diatas 7 tahun itu bakal kekal selamanya? wkwkwk</span>
-    </div>
-      <div class="description">
-        <span>semoga kelak pas anak kita smp bareng, they share the same stories as we did</span>
-    </div>
-      <div class="description">
-        <span>kayaknya kalo kebanyakan doa udah basi ya, jadi singkat aja, may all your wishes come true</span>
-    </div>
-      <div class="description">
-        <span>and the wind guide you, traveler!</span>
+        <span>Selamat menginjak 21+ alias adulthood nisrina. It's been almost 9 years since we first met. Tau ga kata orang usia pertemanan diatas 7 tahun itu bakal kekal selamanya? wkwkwk. Semoga kelak pas anak kita smp bareng, they share the same stories as we did. Kayaknya kalo kebanyakan doa udah basi ya, jadi singkat aja, may all your wishes come true and the wind guide you, traveler!</span>
     </div>
 </body>
 </html>
