--- a/last.html
+++ b/last.html
@@ -16,7 +16,10 @@
         <span>A</span>
     </div>
      <div class="description">
-        <span>Selamat menginjak 21+ alias adulthood nisrina. It's been almost 9 years since we first met. Tau ga kata orang usia pertemanan diatas 7 tahun itu bakal kekal selamanya? wkwkwk. Semoga kelak pas anak kita smp bareng, they share the same stories as we did. Kayaknya kalo kebanyakan doa udah basi ya, jadi singkat aja, may all your wishes come true and the wind guide you, traveler!</span>
+        <span><center></center>Selamat menginjak 21+ alias adulthood nisrina. It's been almost 9 years since we first met. 
+            Tau ga kata orang usia pertemanan diatas 7 tahun itu bakal kekal selamanya? wkwkwk. 
+            Semoga kelak pas anak kita smp bareng, they share the same stories as we did. Kayaknya kalo kebanyakan doa udah basi ya, 
+            jadi singkat aja, may all your wishes come true and the wind guide you, traveler!</center></span>
     </div>
     <audio autoplay>
         <source src = "akhir.mp3" type="audio/mp3"/>
