--- a/last.html
+++ b/last.html
@@ -21,8 +21,8 @@
             Semoga kelak pas anak kita smp bareng, they share the same stories as we did. Kayaknya kalo kebanyakan doa udah basi ya, 
             jadi singkat aja, may all your wishes come true and the wind guide you, traveler!</center></span>
     </div>
-    <audio autoplay>
-        <source src = "akhir.mp3" type="audio/mp3"/>
-    </audio>
+<audio autoplay>
+<source src = "birthday.mp3" type="audio/mp3"/>
+</audio>
 </body>
 </html>
