--- a/last.html
+++ b/last.html
@@ -22,7 +22,7 @@
             jadi singkat aja, may all your wishes come true and the wind guide you, traveler!</center></span>
     </div>
 <audio autoplay>
-<source src = "birthday.mp3" type="audio/mp3"/>
+<source src = "akhir.mp3" type="audio/mp3"/>
 </audio>
 </body>
 </html>
