--- a/last.html
+++ b/last.html
@@ -9,6 +9,9 @@
     <title>Flowers</title>
 </head>
 <body>
+<p>
+<center> <img src="scara.jpg"/> </center>
+</p>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>D</span>
