--- a/last.html
+++ b/last.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <p>
-<center> <img src="scara.jpg"/> </center>
+<center> <img src="scara.jpg" width="300" height="300" alt="scara"/> </center>
 </p>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
