--- a/index.html
+++ b/index.html
@@ -25,13 +25,9 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="last.html">Klik disini</a>
         </button>
     </div>
-     <div class="button">
-        <button>
-            <a href="last.html">Klik lagi</a>
-        </button>
-     </div>
+
 </body>
 </html>
