--- a/last.html
+++ b/last.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <p>
-<center> <img src="scara.jpg" width="300" height="300" alt="scara"/> </center>
+<center> <img src="seal.jpg" width="300" height="300" alt="scara"/> <img src="bigel.jpg" width="300" height="300" alt="scara"/> </center>
 </p>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
@@ -19,11 +19,12 @@
         <span>A</span>
     </div>
      <div class="description">
-        <span><center>Selamat menginjak 21+ alias adulthood nisrina. IYA BETUL FOTONYA YG DIATAS JUGA ADALAH BUKTI.
-            It's been almost 9 years since we first met. Tau ga kata orang usia pertemanan diatas 7 tahun itu bakal kekal selamanya? wkwkwk. 
-            Semoga kelak pas anak kita smp bareng, they share the same stories as we did, termasuk kealayan, keanehan, dan keabsurdan kita. 
-            Because they're make our journey meaningful lol. Kayaknya kalo kebanyakan doa udah basi ya, 
-            jadi singkat aja, may all your wishes come true and the wind guide you, traveler!</center></span>
+        <span><center>Selamat menginjak 19 Bigel. Panjang umur dan sehat selalu. Betah terus ya di poltek
+        dan tetep jadi temen aku 4 tahun kedepan. Waulaupun kamu suka playing victim aku
+        tetep cinta (tapi boong)</center></span>
+    </div>
+         <div class="description">
+        <span><center>Lots of love, Salma Cantik sedunia</center></span>
     </div>
      <div class="button">
         <button>
