--- a/last.html
+++ b/last.html
@@ -20,8 +20,9 @@
     </div>
      <div class="description">
         <span><center>Selamat menginjak 19 Bigel. Panjang umur dan sehat selalu. Betah terus ya di poltek
-        dan tetep jadi temen aku 4 tahun kedepan. Waulaupun kamu suka playing victim aku
-        tetep cinta (tapi boong)</center></span>
+        dan tetep jadi temen aku 3 tahun kedepan. Waulaupun kamu suka playing victim aku
+        tetep cinta (tapi boong). gatau mau nulis apa lagi, semoga mimpimu terkabulkan dan
+        seluruh cita-cita terciptakan, WYATB GIRL!</center></span>
     </div>
          <div class="description">
         <span><center>Lots of love, Salma Cantik sedunia</center></span>
