--- a/last.html
+++ b/last.html
@@ -25,7 +25,7 @@
         seluruh cita-cita terciptakan, WYATB GIRL!</center></span>
     </div>
          <div class="description">
-        <span><center>Lots of love, Salma Cantik sedunia</center></span>
+        <span><center>Lots of love, Salma Cantik sebima sakti</center></span>
     </div>
      <div class="button">
         <button>
