--- a/last.html
+++ b/last.html
@@ -22,7 +22,7 @@
         <span><center>Selamat menginjak 19 Bigel. Panjang umur dan sehat selalu. Betah terus ya di poltek
         dan tetep jadi temen aku 3 tahun kedepan. Walaupun kamu suka playing victim aku
         tetep cinta (tapi boong). gatau mau nulis apa lagi, semoga mimpimu terkabulkan dan
-        seluruh cita-cita terciptakan, WYATB GIRL!</center></span>
+        seluruh cita-cita terciptakan, WYATB GIRL!!</center></span>
     </div>
          <div class="description">
         <span><center>Lots of love, Salma Cantik segalaksi bima sakti</center></span>
