--- a/last.html
+++ b/last.html
@@ -19,10 +19,14 @@
         <span>A</span>
     </div>
      <div class="description">
-        <span><center>Selamat menginjak 19 Bigel. Panjang umur dan sehat selalu. Betah terus ya di poltek
-        dan tetep jadi temen aku 3 tahun kedepan. Walaupun kamu suka playing victim aku
-        tetep cinta (tapi boong). gatau mau nulis apa lagi, semoga mimpimu terkabulkan dan
-        seluruh cita-cita terciptakan, WYATB GIRL!!</center></span>
+        <span><center>Selamat menginjak 20 nuke. It's been 6 years since we first met. How have u been tho? mmf inimah anaknya ga puitis,
+        but you know that I LOVE YOU THAT MUCH RIGHTTT. Akhirnya menginjak kepala 2 ya nuk, dikit lagi bakal ngalamin quarter life
+        crisis nih wkwkwk. Kayaknya tiap tahun gue akan selalu bernostalgia akan bagaimana kita melalui SMAKBO 4 tahun bersama, we've 
+        been through a lot together and i hope that u still see me as ur berstfriend, as always daaan tentu saja juga sebagai tempat
+        buat lu berkeluh kesah. Gue yakin lu cape banget, tiap hari kerja, belum lagi kuliah, jadi kalo emang ada yg mau diceritain
+        langsung PC aja ya bun, dm, pc, telepon gue akan selalu terbuka untuk lu. Keep fighting ya kakak sulung, semoga jalanmu dipermudah,
+        gaperlu selalu berbahagia tapi tetep inget kalo semua masalah itu cuma sementara dan pada akhirnya semua akan selesai dengan baik
+        karena bagaimanapun juga nuke is a strong, independent gurl.</center></span>
     </div>
          <div class="description">
         <span><center>Lots of love, Salma Cantik segalaksi bima sakti</center></span>
