--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>O</span>
     </div>
      <div class="description">
-        <span>Selamat Ulang Tahun Kayla Abigail</span>
+        <span>Selamat Ulang Tahun Nuke Aulia Paramita</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
